# game-of-life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: board.h
src/: board.cpp  main.cpp
